# carve

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  caixa.lisp  flake.nix
crates/carve/: Cargo.toml
crates/carve-types/: Cargo.toml
crates/carve-types/src/: attestation.rs  commit.rs  config.rs  cross_cutting.rs  error.rs  lib.rs  plan.rs  stack.rs  ticket.rs
crates/carve/src/: config.rs  git.rs  github.rs  jira.rs  main.rs
crates/carve/src/cmd/: diagram.rs  execute.rs  gate.rs  jira_sync.rs  mod.rs  plan.rs  restack.rs  status.rs  verify.rs
crates/carve/tests/: synthetic_repo.rs
