[workspace]
resolver = "2"
members = [
    "crates/carve-types",
    "crates/carve",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/carve"
homepage = "https://github.com/pleme-io/carve"
keywords = ["stacked-prs", "jira", "github", "git", "pre-pr"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
octocrab = "0.41"
blake3 = "1.5"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
url = { version = "2", features = ["serde"] }
regex = "1"
globset = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
