[package]
name = "carve-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shikumi-style typed data model for the carve stacked-PR primitive."

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
url = { workspace = true }
blake3 = { workspace = true }
globset = { workspace = true }
