[package]
name = "carve"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Monolithic-branch → ticket-aligned stacked-PR carving CLI."

[[bin]]
name = "carve"
path = "src/main.rs"

[dependencies]
carve-types = { path = "../carve-types" }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
octocrab = { workspace = true }
blake3 = { workspace = true }
time = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = "3"
